[bdist_wheel]
universal = 0

[metadata]
name = python-clu
version = 0.8.4
author = Alexander Böhn
classifiers = file: CLASSIFIERS.txt
description = CLU - Common Lightweight Utilities, or Command-Line Utilities (your pick)
long_description = file: README.md
url = https://github.com/fish2000/CLU
keywords = setuptools, command, command-line, utilities, modules, REPL, tools

[options]
zip_safe = False
include_package_data = True
install_requires = file: requirements/install.txt
package_dir=
    =clu
packages = find:

[options.package_data]
* = *.*

[options.packages.find]
where=clu
